// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correct minified slotted picture/image styles for component: p-button-tile 1`] = `
{
  "@global": {
    ":is(p-button-tile) picture img": {
      "height": "100% !important",
      "objectFit": "cover !important",
      "width": "100% !important",
    },
  },
}
`;

exports[`should return correct minified slotted picture/image styles for component: p-link-tile 1`] = `
{
  "@global": {
    ":is(p-link-tile) picture img": {
      "height": "100% !important",
      "objectFit": "cover !important",
      "width": "100% !important",
    },
  },
}
`;

exports[`should return correct minified slotted picture/image styles for component: p-link-tile-model-signature 1`] = `
{
  "@global": {
    ":is(p-link-tile-model-signature) picture img": {
      "height": "100% !important",
      "objectFit": "cover !important",
      "width": "100% !important",
    },
  },
}
`;

exports[`should return correct minified slotted picture/image styles for component: p-link-tile-product 1`] = `
{
  "@global": {
    ":is(p-link-tile-product) picture img": {
      "height": "100% !important",
      "objectFit": "cover !important",
      "width": "100% !important",
    },
  },
}
`;
